[gd_scene load_steps=8 format=3 uid="uid://llda5adqeuc7"]

[ext_resource type="Texture2D" uid="uid://b6ujtemd20iwu" path="res://Assets/Art/Cenário jogo mobile png.png" id="1_d1gdj"]
[ext_resource type="Script" uid="uid://c763hpwiyv4gp" path="res://Assets/Scripts/mapa_jogo.gd" id="1_wjigt"]
[ext_resource type="Texture2D" uid="uid://c48a88p8b5bl1" path="res://Assets/Art/icons8-coração-48.png" id="2_jpdh3"]
[ext_resource type="Texture2D" uid="uid://dpmqtvhes2psp" path="res://Assets/Art/icons8-moeda-48.png" id="3_gbiob"]
[ext_resource type="Texture2D" uid="uid://dd0b635hpvq4j" path="res://Assets/Art/unity-removebg-preview.png" id="4_jpdh3"]
[ext_resource type="AudioStream" uid="uid://d4lrscj2vgmhe" path="res://Assets/Audio/tiro.mp3" id="6_5iwor"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gbiob"]
radius = 109.0
height = 288.0

[node name="MapaJogo" type="Node2D"]
script = ExtResource("1_wjigt")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("1_d1gdj")
stretch_mode = 6

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VidasContainer" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
alignment = 2

[node name="Vida1" type="TextureRect" parent="CanvasLayer/VidasContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_jpdh3")
expand_mode = 2
stretch_mode = 5

[node name="Vida2" type="TextureRect" parent="CanvasLayer/VidasContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_jpdh3")
expand_mode = 2
stretch_mode = 5

[node name="Vida3" type="TextureRect" parent="CanvasLayer/VidasContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_jpdh3")
expand_mode = 2
stretch_mode = 5

[node name="Vida4" type="TextureRect" parent="CanvasLayer/VidasContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_jpdh3")
expand_mode = 2
stretch_mode = 5

[node name="PontosContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 20.0
offset_right = 200.0
offset_bottom = 100.0

[node name="MoedaIcon" type="TextureRect" parent="CanvasLayer/PontosContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("3_gbiob")
expand_mode = 2
stretch_mode = 5

[node name="LabelPontos" type="Label" parent="CanvasLayer/PontosContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 60
text = "0"

[node name="AreaJogo" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1700.0

[node name="CharacterBody2D" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(252, 873)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_gbiob")

[node name="Unity-removebg-preview" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(17.5, 27.75)
scale = Vector2(0.621429, 0.661345)
texture = ExtResource("4_jpdh3")

[node name="AudioTiro" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_5iwor")
